<resources>
    <!-- Name of the application -->
    <string name="app_name">Report Card</string>

    <!-- Title of the RegistrationActivity -->
    <string name="reg_title">Hello, Welcome Aboard!</string>

    <!-- Logo image description -->
    <string name="logo">ReportCard App logo</string>

    <!-- Button of the RegistrationActivity -->
    <string name="reg_btn">Register</string>

    <!-- First Name of the User -->
    <string name="firstName">First Name</string>

    <!-- Last Name of the User -->
    <string name="lastName">Last Name</string>

    <!-- Username of the user, which will be provided by the admin to the student and teacher -->
    <string name="username">User Name</string>

    <!-- Password of the user, which will be provided by the admin to the student and teacher -->
    <string name="pwd">Password</string>

    <!-- Message of the RegistrationActivity -->
    <string name="reg_msg">Already a user? SignIn</string>

    <!-- Message for the new user -->
    <string name="reg_desc">Send your details for verification</string>

    <!-- Email of the user -->
    <string name="email">Email</string>

    <!-- Title of the LoginActivity -->
    <string name="login_title">Hello, Welcome Back!</string>

    <!-- Button of the LoginActivity -->
    <string name="login_btn">Login</string>

    <!-- Message of the LoginActivity -->
    <string name="login_msg">New here? Register Yourself.</string>

    <!-- Popup close button -->
    <string name="pop_close">X</string>

    <!-- Popup image description -->
    <string name="popImg_desc">Admin Avatar</string>

    <!-- Popup image title -->
    <string name="pop_img">Admin</string>

    <!-- Popup message -->
    <string name="pop_msg">Make sure your inputs are correct! It will be sent to the IT Admin.
        Use your first two letters of name and email as your Username to login, once you are verified.</string>

    <!-- Popup button cancel -->
    <string name="pop_cancel">Cancel</string>

    <!-- Popup button submit -->
    <string name="pop_submit">Submit</string>

    <!-- App intro image description -->
    <string name="introIcon">App Intro Image</string>

    <!-- Intro slide heading -->
    <string name="introHeading">Heading</string>

    <!-- Intro slide description -->
    <string name="introDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed to elusmod tempor incididunt ut et dolore labore etmagna aliqua.  </string>

    <!-- Intro slide back button -->
    <string name="introBackButton">Back</string>

    <!-- Intro slide next button -->
    <string name="introNextButton">Next</string>

    <!-- Intro slide finish button -->
    <string name="introFinishButton">Finish</string>

    <!-- String for Welcome -->
    <string name="welcome">Welcome, </string>

    <!-- MainActivity button MyProfile -->
    <string name="myself">Myself</string>

    <!-- MainActivity button Grades -->
    <string name="my_grades">My Grades</string>

    <!-- MainActivity button Assistance -->
    <string name="assistance">Assistance</string>

    <!-- MainActivity button Logout -->
    <string name="logout">Logout</string>

    <!-- String for phone -->
    <string name="phone">Phone</string>

    <!-- String for change password -->
    <string name="change_pwd">Change Password</string>

    <!-- String for Subject -->
    <string name="subject">Subject</string>

    <!-- String for Grade - A+ -->
    <string name="grade">A+</string>

</resources>