<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".login.LoginActivity">

    <ImageView
        style="@style/LogoImage"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

    <TextView
        style="@style/MyTextView"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textStyle="bold" />

    <TextView
        style="@style/MyTextView"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/login_title"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etLoginUsername"
        style="@style/MyEditText"
        android:layout_marginStart="14dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="14dp"
        android:autofillHints="@string/username"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        android:id="@+id/etLoginPassword"
        style="@style/MyEditText"
        android:layout_marginStart="14dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="14dp"
        android:autofillHints="@string/email"
        android:hint="@string/pwd"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/MyButton"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:text="@string/login_btn" />

    <TextView
        style="@style/MyTextView"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/login_msg"
        android:onClick="txtSignUpClick"
        android:textAppearance="@android:style/TextAppearance.Medium" />

</LinearLayout>