<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".login.RegisterActivity">

    <ImageView
        style="@style/LogoImage"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

    <TextView
        style="@style/MyTextView"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textStyle="bold" />

    <TextView
        style="@style/MyTextView"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/reg_title"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etFirstName"
        style="@style/MyEditText"
        android:layout_marginStart="14dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="14dp"
        android:autofillHints="@string/firstName"
        android:hint="@string/firstName"
        android:inputType="text" />

    <EditText
        android:id="@+id/etLastName"
        style="@style/MyEditText"
        android:layout_marginStart="14dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="14dp"
        android:autofillHints="@string/lastName"
        android:hint="@string/lastName"
        android:inputType="text" />

    <EditText
        android:id="@+id/etEmail"
        style="@style/MyEditText"
        android:layout_marginStart="14dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="14dp"
        android:autofillHints="@string/email"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <TextView
        style="@style/MyTextView"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/reg_desc"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <Button
        android:id="@+id/btnRegister"
        style="@style/MyButton"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:onClick="regBtnClick"
        android:text="@string/reg_btn" />

    <TextView
        style="@style/MyTextView"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:onClick="txtSignInClick"
        android:text="@string/reg_msg"
        android:textAppearance="@android:style/TextAppearance.Medium" />

</LinearLayout>