<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <TextView
        style="@style/MyTextView"
        android:layout_margin="12dp"
        android:gravity="center"
        android:text="@string/myself"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="154dp"
        android:layout_height="154dp"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/avatar" />

    <EditText
        android:id="@+id/etFirstName"
        style="@style/MyEditText"
        android:layout_marginStart="12dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="12dp"
        android:autofillHints="@string/firstName"
        android:hint="@string/firstName"
        android:inputType="text" />

    <EditText
        android:id="@+id/etLastName"
        style="@style/MyEditText"
        android:layout_marginStart="12dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="12dp"
        android:autofillHints="@string/lastName"
        android:hint="@string/lastName"
        android:inputType="text" />

    <EditText
        android:id="@+id/etUsername"
        style="@style/MyEditText"
        android:layout_marginStart="12dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="12dp"
        android:autofillHints="@string/username"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        android:id="@+id/etPhone"
        style="@style/MyEditText"
        android:layout_marginStart="12dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="12dp"
        android:autofillHints="@string/phone"
        android:hint="@string/phone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/etEmail"
        style="@style/MyEditText"
        android:layout_marginStart="12dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="12dp"
        android:autofillHints="@string/email"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="12dp"
        android:text="@string/change_pwd" />

</LinearLayout>