<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="326dp"
    android:layout_height="416dp"
    android:layout_gravity="center"
    android:background="@color/popupBg"
    android:orientation="vertical"
    android:padding="4dp">

    <TextView
        android:id="@+id/txtPopClose"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="end"
        android:layout_marginTop="4dp"
        android:background="@drawable/image_bg"
        android:gravity="center"
        android:text="@string/pop_close"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@android:color/white" />

    <ImageView
        style="@style/LogoImage"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/popImg_desc"
        android:src="@drawable/avatar" />

    <TextView
        style="@style/MyTextView"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/pop_img"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        style="@style/MyTextView"
        android:layout_marginStart="4dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="4dp"
        android:text="@string/pop_msg"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp">

        <Button
            android:id="@+id/btnPopCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/pop_cancel"
            android:background="@drawable/button_bg"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/btnPopSubmit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/pop_submit"
            android:background="@drawable/button_bg"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</LinearLayout>