<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivSlideIcon"
        android:layout_width="224dp"
        android:layout_height="224dp"
        android:layout_marginTop="64dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/icon_read"
        android:contentDescription="@string/introIcon" />

    <TextView
        android:layout_below="@id/ivSlideIcon"
        android:layout_marginTop="24dp"
        android:layout_centerInParent="true"
        android:id="@+id/txtSlideHeading"
        style="@style/MyTextView"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:text="@string/introHeading"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/txtSlideDescription"
        style="@style/MyTextView"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:text="@string/introDesc"
        android:textSize="14sp"
        android:layout_marginStart="12dp"
        android:textStyle="bold"
        android:layout_below="@id/txtSlideHeading"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="24sp"/>

    <Button
        android:id="@+id/btnSlideBack"
        style="@style/MyButton"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/transparent"
        android:text="@string/introBackButton"
        android:layout_margin="8sp"/>

    <Button
        android:id="@+id/btnSlideNext"
        style="@style/MyButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:text="@string/introNextButton"
        android:layout_margin="8sp"/>


</RelativeLayout>